[package]
name = "wrap_rocks"
version = "0.3.8"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "wrap_rocks"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.3", features = ["extension-module"] }
#rocksdb = "0.22.0"
rust-rocksdb = { version = "0.33.0", features= ["zstd"] }
