[package]
name = "wrap_rocks"
version = "0.6.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "wrap_rocks"
crate-type = ["cdylib"]

[dependencies]
ffi = "0.1.1"
pyo3 = { version = "0.24.1", features = ["extension-module"] }
rust-rocksdb = { version = "0.33.0", features= ["zstd", "multi-threaded-cf"] }
