[build-system]
requires = ["maturin>=1.8.3"]
build-backend = "maturin"

[project]
name = "wrap_rocks"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

