[build-system]
requires = ["maturin>=1.8.3"]
build-backend = "maturin"

[project]
name = "wrap_rocks"
version = "0.6.3"
requires-python = ">=3.8"
authors = [
    {email = "mvalentine65@gmail.com"},
    {name = "Michael Valentine"}
]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Filesystems",
]
keywords = [
    "RocksDB",
    "database",
    "key-value store",
    "Python wrapper",
    "rocksdb",
    "storage",
    "embedded database",
    "high-performance",
    "database binding",
]
